--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,6 +4,12 @@
 ARG VARIANT="3.10-bullseye"
 FROM mcr.microsoft.com/vscode/devcontainers/python:0-${VARIANT}
 
+ADD .devcontainer/dev_requirements.txt .
+RUN python3.9 -m pip install --upgrade pip
+# Installing first pip-licenses so we can track what licenses/versions of packages
+RUN python3.9 -m pip install -U pip-licenses
+RUN python3.9 -m pip install --no-cache-dir -r /dev_requirements.txt
+
 # [Choice] Node.js version: none, lts/*, 16, 14, 12, 10
 ARG NODE_VERSION="none"
 RUN if [ "${NODE_VERSION}" != "none" ]; then su vscode -c "umask 0002 && . /usr/local/share/nvm/nvm.sh && nvm install ${NODE_VERSION} 2>&1"; fi
